--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,1 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
+
+@font-face {
+    font-family: "Satoshi";
+    src: url("../assets/fonts/Satoshi-Variable.ttf") format("truetype");
+}
