--- a/src/index.scss
+++ b/src/index.scss
@@ -75,3 +75,26 @@ button {
     background-color: #f9f9f9;
   }
 }
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #7b1fa2;
+
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+  /* display: none; */
+}
+::-moz-selection {
+  color: #7b1fa2;
+  background: rgb(254 249 195);
+}
+
+::selection {
+  color: #7b1fa2;
+  background: rgb(254 249 195);
+}
